<!--
  ~ Copyright 2019 Punch Through Design LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">TED Monitoring</string>
    <string name="ble_playground">BLE Playground</string>
    <string name="config_robot">Configure Robot</string>
    <string name="config_dome">Configure Dome</string>
    <string name="information">Information</string>
    <string name="controller">Controller</string>
    <string name="sensor_information">Live Sensor Readings</string>
    <string name="sensor_history">Sensor History</string>
    <string name="robot_controller">Robot Controller</string>
    <string name="sensors">Sensors</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
